Added compiling and running instructions